[gd_scene load_steps=13 format=2]

[ext_resource path="res://scenes/cbar.gd" type="Script" id=1]
[ext_resource path="res://scenes/recovery/new_password.gd" type="Script" id=2]
[ext_resource path="res://ui/fonts/seguihis.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://ui/fonts/Arial.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://ui/themes/text_entry.tres" type="Theme" id=5]
[ext_resource path="res://ui/themes/default_button.tres" type="Theme" id=6]
[ext_resource path="res://ui/icons/application_icon.png" type="Texture" id=7]
[ext_resource path="res://ui/icons/buttons/hide_password.png" type="Texture" id=8]

[sub_resource type="Animation" id=2]
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rect_position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 64, -0.25, 0, 0.25, 0, 32, -0.25, 0, 0.25, 0, 64, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:rect_rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 360, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.2, 0.8 )
}

[sub_resource type="DynamicFont" id=1]
size = 25
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 18
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
use_filter = true
font_data = ExtResource( 4 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="backround" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 0.997
margin_bottom = 1.79999
color = Color( 0.137255, 0.137255, 0.137255, 1 )

[node name="icon" type="TextureRect" parent="backround"]
margin_left = 448.0
margin_top = 64.0
margin_right = 576.0
margin_bottom = 192.0
rect_pivot_offset = Vector2( 64, 64 )
texture = ExtResource( 7 )
expand = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="backround/icon"]
autoplay = "icon"
anims/icon = SubResource( 2 )

[node name="title" type="Label" parent="backround"]
margin_left = 320.0
margin_top = 200.0
margin_right = 704.0
margin_bottom = 235.0
custom_fonts/font = SubResource( 1 )
text = "Create New Password"
align = 1
valign = 1

[node name="indicator" type="Label" parent="backround"]
margin_left = 320.0
margin_top = 392.0
margin_right = 704.0
margin_bottom = 408.0
align = 1
valign = 1

[node name="text_entry_1" type="LineEdit" parent="."]
margin_left = 384.0
margin_top = 280.0
margin_right = 640.0
margin_bottom = 320.0
theme = ExtResource( 5 )
custom_fonts/font = SubResource( 3 )
max_length = 12
secret = true
secret_character = "O"
context_menu_enabled = false
clear_button_enabled = true
placeholder_text = "New Password"
caret_blink = true

[node name="text_entry_2" type="LineEdit" parent="."]
margin_left = 384.0
margin_top = 344.0
margin_right = 640.0
margin_bottom = 384.0
theme = ExtResource( 5 )
custom_fonts/font = SubResource( 3 )
max_length = 12
secret = true
secret_character = "O"
context_menu_enabled = false
clear_button_enabled = true
placeholder_text = "Confirm Password"
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hide_password" type="TextureButton" parent="."]
margin_left = 648.0
margin_top = 320.0
margin_right = 680.0
margin_bottom = 344.0
focus_mode = 0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 8 )
expand = true
stretch_mode = 3

[node name="done" type="Button" parent="."]
margin_left = 936.0
margin_top = 552.0
margin_right = 1008.0
margin_bottom = 584.0
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource( 6 )
text = "Done"

[node name="cancel" type="Button" parent="."]
margin_left = 8.0
margin_top = 560.0
margin_right = 72.0
margin_bottom = 592.0
focus_mode = 0
mouse_default_cursor_shape = 2
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.105882, 0.45098, 0.909804, 1 )
text = "Cancel"
flat = true

[node name="cbar" type="Control" parent="."]
margin_right = 1024.0
margin_bottom = 32.0
script = ExtResource( 1 )

[node name="exit" type="Button" parent="cbar"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 998.499
margin_top = 2.584
margin_right = -2.50098
margin_bottom = -4.416
focus_mode = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "X"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="hide_password" to="." method="_on_hide_password_pressed"]
[connection signal="pressed" from="done" to="." method="_on_done_pressed"]
[connection signal="pressed" from="cancel" to="." method="_on_cancel_pressed"]
[connection signal="gui_input" from="cbar" to="cbar" method="_on_cbar_gui_input"]
[connection signal="pressed" from="cbar/exit" to="cbar" method="_on_exit_pressed"]
